# OpenGL-learning

./: .gitignore  CMakeLists.txt  README.md
Demos/Demo1/: CMakeLists.txt
Demos/Demo1/assets/shaders/: Demo1.glsl  shader1.glsl
Demos/Demo1/include/: DemoApp.h
Demos/Demo1/src/: DemoApp.cpp  main.cpp
Demos/Demo2/: CMakeLists.txt
Demos/Demo2/include/: DemoApp.h
Demos/Demo2/src/: DemoApp.cpp  main.cpp
GLToolBox/: CMakeLists.txt  GLToolBox.h
GLToolBox/include/Application/: Application.h
GLToolBox/include/Debug/: Log.h
GLToolBox/include/Render/Buffers/: BufferLayout.h  IndexBuffer.h  VertexArray.h  VertexBuffer.h
GLToolBox/include/Render/Resources/: Shader.h
GLToolBox/src/Application/: Application.cpp
GLToolBox/src/Debug/: Log.cpp
GLToolBox/src/Render/Buffers/: BufferLayout.cpp  IndexBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
GLToolBox/src/Render/Resources/: Shader.cpp
