cmake_minimum_required(VERSION 3.26)
project(Demo1)

set(CMAKE_CXX_STANDARD 17) # 设置为 C++17 标准
set(CMAKE_CXX_STANDARD_REQUIRED True)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OUTPUTPATH}/${CMAKE_BUILD_TYPE}/${PROJECT_NAME})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUTPATH}/${CMAKE_BUILD_TYPE}/${PROJECT_NAME})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OUTPUTPATH}/${CMAKE_BUILD_TYPE}/${PROJECT_NAME})

file(GLOB_RECURSE SOURCES "${CMAKE_CURRENT_LIST_DIR}/src/*.cpp")

# 将资源文件拷贝到构建目录
file(GLOB ASSETS "${CMAKE_CURRENT_LIST_DIR}/assets")
file(COPY ${ASSETS} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

add_executable(${PROJECT_NAME} ${SOURCES})
target_include_directories(${PROJECT_NAME} PUBLIC include)
target_link_libraries(${PROJECT_NAME}
    PRIVATE
    GLToolBox
)